Bug 197927 - Crash under WebCore::TimerBase::~TimerBase after a download is canceled
Summary: Crash under WebCore::TimerBase::~TimerBase after a download is canceled
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2019-05-15 14:37 PDT by David Quesada
Modified: 2019-05-29 10:29 PDT (History)
9 users (show)

See Also:


Attachments
Patch (3.23 KB, patch)
2019-05-15 15:49 PDT, David Quesada
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description David Quesada 2019-05-15 14:37:28 PDT
rdar://problem/50822728
Comment 1 David Quesada 2019-05-15 15:49:02 PDT
Created attachment 370001 [details]
Patch
Comment 2 Ryosuke Niwa 2019-05-24 14:46:08 PDT
Comment on attachment 370001 [details]
Patch

Looks sane to me.
Comment 3 WebKit Commit Bot 2019-05-24 15:13:08 PDT
Comment on attachment 370001 [details]
Patch

Clearing flags on attachment: 370001

Committed r245756: <https://trac.webkit.org/changeset/245756>
Comment 4 WebKit Commit Bot 2019-05-24 15:13:09 PDT
All reviewed patches have been landed.  Closing bug.
Comment 5 Shawn Roberts 2019-05-24 17:30:14 PDT
Hello,

it appears like after changes in r245756 the following API tests are flakey timeouts

TestWebKitAPI.DownloadProgress.LoseProgressWhenDownloadIsCanceled 

Appears to time out every WK2 run

https://build.webkit.org/builders/Apple%20Mojave%20Release%20WK1%20%28Tests%29/builds/5157/steps/run-api-tests/logs/stdio

Also these 2 can also timeout on WK1

TestWebKitAPI.DownloadProgress.CancelDownloadWhenProgressIsCanceled
TestWebKitAPI._WKDownload.DownloadMonitorCancel

https://build.webkit.org/builders/Apple%20Mojave%20Release%20WK1%20%28Tests%29/builds/5158/steps/run-api-tests/logs/stdio

We are having issues with Debug builders right now, so I do not have spades to test with. I will try to get some to test with, but this seems like the most likely culprit for these Timeouts.