Crash under WebCore::TimerBase::~TimerBase after a download is canceled https://bugs.webkit.org/show_bug.cgi?id=197927 rdar://problem/50822728

Reviewed by Ryosuke Niwa.

* NetworkProcess/Downloads/cocoa/DownloadCocoa.mm:
(WebKit::Download::platformCancelNetworkLoad):
    CFNetwork makes no guarantees about what thread is used to call the completion block
    passed to -[NSURLSessionDownloadTask cancelByProducingResumeData], and in some cases,
    it can be called on a background queue. This eventually causes the Download to be
    deallocated on the background queue, which triggers a release assertion failure in
    ~TimerBase. When CFNetwork finishes canceling the download, we should move to the
    main thread before calling didCancel().


Canonical link: https://commits.webkit.org/212286@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245756 268f45cc-cd09-0410-ab3c-d52691b4dbfc